# tesseract-opencv-detect

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/tesseract/: CMakeLists.txt  tessbaseapi.cpp
app/src/main/java/com/example/myapplication/: AssetsUtils.kt  MainActivity.kt  TextResult.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
